src/test/scala/wacc/wacc_examples/invalid/semanticErr/function/badlyNamed.wacc
# function return type and name are conflated

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  intf() is
    return 42
  end

  int x = call f()
end
